--- a/SettingDemo/SettingDemo.vcxproj
+++ b/SettingDemo/SettingDemo.vcxproj
@@ -91,6 +91,7 @@
     </ClCompile>
     <ClCompile Include="main.cpp" />
     <ClCompile Include="settingdemo.cpp" />
+    <ClCompile Include="SettingsEx.cpp" />
   </ItemGroup>
   <ItemGroup>
     <CustomBuild Include="settingdemo.h">
@@ -119,6 +120,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="GeneratedFiles\ui_settingdemo.h" />
+    <ClInclude Include="SettingsEx.h" />
   </ItemGroup>
   <ItemGroup>
     <CustomBuild Include="settingdemo.qrc">
