--- a/SettingDemo/SettingDemo.vcxproj.filters
+++ b/SettingDemo/SettingDemo.vcxproj.filters
@@ -50,6 +50,9 @@
     <ClCompile Include="GeneratedFiles\qrc_settingdemo.cpp">
       <Filter>Generated Files</Filter>
     </ClCompile>
+    <ClCompile Include="SettingsEx.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <CustomBuild Include="settingdemo.h">
@@ -65,6 +68,9 @@
   <ItemGroup>
     <ClInclude Include="GeneratedFiles\ui_settingdemo.h">
       <Filter>Generated Files</Filter>
+    </ClInclude>
+    <ClInclude Include="SettingsEx.h">
+      <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
 </Project>
